--- a/travel.html
+++ b/travel.html
@@ -45,5 +45,28 @@
         </div>
       </section>
     </div>
+    <section class="sec2">
+      <div class="exhava">
+        <h4>EXPERIENCE HAWAII</h4>
+        <h2>Get inspired</h2>
+        <p>
+          Discover other sides of the city and see what Hawaii has to offer.
+        </p>
+        <i class="fas fa-arrow-circle-left"></i>
+        <i class="fas fa-arrow-circle-right"></i>
+      </div>
+      <div class="box1">
+        <h3>Surfing in the sea</h3>
+        <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+      </div>
+      <div class="box2">
+        <h3>Organic Food</h3>
+        <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+      </div>
+      <div class="box3">
+        <h3>Endless Shores</h3>
+        <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+      </div>
+    </section>
   </body>
 </html>
