--- a/travel.html
+++ b/travel.html
@@ -52,8 +52,10 @@
         <p>
           Discover other sides of the city and see what Hawaii has to offer.
         </p>
-        <i class="fas fa-arrow-circle-left"></i>
-        <i class="fas fa-arrow-circle-right"></i>
+        <p>
+          <i class="fas fa-arrow-circle-left"></i>
+          <i class="fas fa-arrow-circle-right"></i>
+        </p>
       </div>
       <div class="box1">
         <h3>Surfing in the sea</h3>
@@ -63,10 +65,208 @@
         <h3>Organic Food</h3>
         <a href="">Discover more <i class="fas fa-greater-than"></i></a>
       </div>
+
       <div class="box3">
         <h3>Endless Shores</h3>
         <a href="">Discover more <i class="fas fa-greater-than"></i></a>
       </div>
     </section>
+    <div class="youradv">
+      <h4>FIND YOUR ADVENTURE</h4>
+      <h2>Most Popular Tours</h2>
+      <p>
+        With so much to do and discover in Iceland, it can be hard to choose an
+        activity.Our diverse selection includes hiking, caving, glacier walks,
+        ice climbing, mountain climbing, hunting for the Northern Lights and
+        many more!
+      </p>
+    </div>
+    <section class="adventures">
+      <div class="kutu1">
+        <div class="foto1">
+          <h3>Surfing in the sea</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details1">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+      <div class="kutu2">
+        <div class="foto2">
+          <h3>Relaxing on beach</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details2">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+      <div class="kutu3">
+        <div class="foto3">
+          <h3>Kayaking</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details3">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+      <div class="kutu4">
+        <div class="foto4">
+          <h3>Iceland</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details4">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+      <div class="kutu5">
+        <div class="foto5">
+          <h3>Visit Wooden Bridge</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details5">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+      <div class="kutu6">
+        <div class="foto6">
+          <h3>Beautiful Sunset</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details6">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+      <div class="kutu7">
+        <div class="foto7">
+          <h3>Beach House</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details7">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+      <div class="kutu8">
+        <div class="foto8">
+          <h3>Water House</h3>
+          <a href="">Discover more <i class="fas fa-greater-than"></i></a>
+        </div>
+        <div class="details8">
+          <p><i class="fas fa-clock"></i> 1 hour 30 min</p>
+          <p><i class="fas fa-tag"></i> $399</p>
+        </div>
+      </div>
+    </section>
+    <hr class="hr" />
+    <div class="yourflight">
+      <h4>FIND YOUR EASY FLIGHT</h4>
+      <h2>Top Round-trip Flight Deals</h2>
+    </div>
+    <section class="flights">
+      <div class="hongkong1">
+        <p>From Hongkong</p>
+        <h2>Bangkok</h2>
+        <p>Sun, May 23 <i class="fas fa-exchange-alt"></i> Wed, May 27</p>
+        <hr />
+        <p>Starting from <span>$399</span></p>
+      </div>
+      <div class="hongkong2">
+        <p>From Hongkong</p>
+        <h2>Hamilton</h2>
+        <p>Sun, May 23 <i class="fas fa-exchange-alt"></i>Wed, May 27</p>
+        <hr />
+        <p>Starting from <span>$200</span></p>
+      </div>
+      <div class="hongkong3">
+        <p>From Hongkong</p>
+        <h2>Washington D.C.</h2>
+        <p>Sun, May 23 <i class="fas fa-exchange-alt"></i> Wed, May 27</p>
+        <hr />
+        <p>Starting from <span>$299</span></p>
+      </div>
+      <div class="hongkong4">
+        <p>From Hongkong</p>
+        <h2>Tehran</h2>
+        <p>Sun, May 23 <i class="fas fa-exchange-alt"></i> Wed, May 27</p>
+        <hr />
+        <p>Starting from <span>$100</span></p>
+      </div>
+      <div class="hongkong5">
+        <p>From Hongkong</p>
+        <h2>Georgetown</h2>
+        <p>Sun, May 23 <i class="fas fa-exchange-alt"></i> Wed, May 27</p>
+        <hr />
+        <p>Starting from <span>$60</span></p>
+      </div>
+      <div class="hongkong6">
+        <p>From Hongkong</p>
+        <h2>Barcelona</h2>
+        <p>Sun, May 23 <i class="fas fa-exchange-alt"></i> Wed, May 27</p>
+        <hr />
+        <p>Starting from <span>$399</span></p>
+      </div>
+    </section>
+    <div class="email">
+      <h4>GETT OFF 20% ON FIRST 10 BOOKINGS</h4>
+      <h2>Enter your email to get 20% off instantly</h2>
+      <form>
+        <input
+          type="text"
+          class="empty"
+          name="s"
+          tabindex="2"
+          placeholder="Email@example.com"
+        /><input type="submit" value="SEND OFFER" class="btn" />
+      </form>
+    </div>
+    <hr class="hr" />
+    <footer>
+      <div class="foot1">
+        <p>Who we are</p>
+        <p>About us</p>
+        <p>guide Training & Safety</p>
+        <p>Out Guides</p>
+        <p>Office Team</p>
+        <p>Our Credentials</p>
+        <p>Blog</p>
+        <p>Videos</p>
+      </div>
+      <div class="foot2">
+        <p>Our Environment</p>
+        <p>Environmental Policy</p>
+        <p>Responsible Tourism</p>
+        <p>Carbon Emissions</p>
+        <p>Environmental Fund</p>
+        <p>Environmental Awards</p>
+      </div>
+      <div class="foot3">
+        <p>Our info</p>
+        <p>Pick up locations</p>
+        <p>Terms of Payment</p>
+        <p>Privacy Policy</p>
+        <p>Diffuculty Levels</p>
+        <p>Where to Find Us</p>
+        <p>Hawaii Glacier Hike Guide</p>
+      </div>
+      <div class="foot4">
+        <p>Contact Us</p>
+        <p>Musab</p>
+        <p>Kartal</p>
+        <p>Phone- +880234312363</p>
+        <p>Mail- musabkrtl@gmail.com</p>
+        <p>Adress-Kocaeli</p>
+        <p>Turkey</p>
+      </div>
+    </footer>
+    <hr class="hr1" />
+    <div class="rights">
+      <p>&copy; All rights reserved</p>
+    </div>
   </body>
 </html>
