80% responsive for mobile

--- a/travel.html
+++ b/travel.html
@@ -10,12 +10,17 @@
       <header>
         <div class="logo">
           <a href="">
-            <p><i class="fas fa-tree"></i>Hawaii</p>
+            <p>
+              <i class="fas fa-tree"></i>Hawaii<i
+                id="bars"
+                class="fas fa-bars"
+              ></i>
+            </p>
           </a>
         </div>
         <div class="nav">
-          <ul>
-            <li><a href="">Places</a></li>
+          <ul class="aaa">
+            <li class="list1"><a href="">Places</a></li>
             <li><a href="">Pricing</a></li>
             <li><a href="">Navigate</a></li>
             <li><a href="">Contact</a></li>
@@ -268,5 +273,6 @@
     <div class="rights">
       <p>&copy; All rights reserved</p>
     </div>
+    <script src="travel.js"></script>
   </body>
 </html>
